# TwoFus

./: CMakeLists.txt  README.md
src/: #mobileElement.hpp#  CMakeLists.txt  MEHead.cpp  MEHead.hpp  clipCoords.cpp  clipCoords.hpp  contigs.cpp  contigs.hpp  genotype.cpp  genotype.hpp  input.cpp  input.hpp  insertion.cpp  insertion.hpp  kmers.cpp  kmers.cpp~  kmers.hpp  kmers.hpp~  mobileElement.cpp  mobileElement.hpp  polyTail.cpp  polyTail.hpp  translocation.cpp  translocation.hpp  util.cpp  util.hpp  variant.cpp  variant.hpp  variant.hpp~  vcfWriter.cpp  vcfWriter.hpp
testData/: input.txt  largeInsertionSmall.bam  largeInsertionSmall.bam.generator.V2.overlap.hashcount.fastq.bam
tools/: CMakeLists.txt  runTwofus.cpp
